<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="80dp"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="Change Password"
        android:textColor="@color/textColorPrimary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/warningColor"
        android:textSize="18sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/hintTextColor"
        android:background="@drawable/rounded_edittext">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:hint="Email"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Authentication Email"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:paddingHorizontal="12sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="Back"
        android:textColor="@color/white"
        android:padding="20dp"
        android:textSize="15sp" />

</LinearLayout>
