<resources>
    <string name="app_name">EchoPlay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
</resources>