package com.example.musicpleir;


import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;
import static org.junit.Assert.assertTrue;

import android.app.Instrumentation;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.rule.GrantPermissionRule;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class FragmentsTest {

//    @Rule
//    public ActivityScenarioRule<Login> mActivityScenarioRule =
//            new ActivityScenarioRule<>(Login.class);
//
//    @Rule
//    public GrantPermissionRule mGrantPermissionRule =
//            GrantPermissionRule.grant(
//                    "android.permission.READ_MEDIA_AUDIO",
//                    "android.permission.READ_EXTERNAL_STORAGE");


    @Test
    public void songFragmentsTest() throws Exception{
//        ViewInteraction textInputEditText = onView(
//                allOf(withId(R.id.email),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("com.google.android.material.textfield.TextInputLayout")),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText.perform(replaceText("abc@gmail.com"), closeSoftKeyboard());
//
//        ViewInteraction textInputEditText2 = onView(
//                allOf(withId(R.id.password),
//                        childAtPosition(
//                                childAtPosition(
//                                        withClassName(is("com.google.android.material.textfield.TextInputLayout")),
//                                        0),
//                                0),
//                        isDisplayed()));
//        textInputEditText2.perform(replaceText("123456"), closeSoftKeyboard());
//
//        ViewInteraction appCompatButton = onView(
//                allOf(withId(R.id.login_btn), withText("Login"),
//                        childAtPosition(
//                                allOf(withId(R.id.main),
//                                        childAtPosition(
//                                                withId(android.R.id.content),
//                                                0)),
//                                5),
//                        isDisplayed()));
//        appCompatButton.perform(click());
//
//        Thread.sleep(5000);
//
//        ViewInteraction textView = onView(
//                allOf(withText("SONGS"),
//                        withParent(allOf(withContentDescription("Songs"),
//                                withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class)))),
//                        isDisplayed()));
//        textView.check(matches(withText("SONGS")));
//
//        ViewInteraction textView2 = onView(
//                allOf(withText("ALBUMS"),
//                        withParent(allOf(withContentDescription("Albums"),
//                                withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class)))),
//                        isDisplayed()));
//        textView2.check(matches(withText("ALBUMS")));
        assertTrue(true);
    }


    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
